Spacing fix for services, for real this time

--- a/styles/home.less
+++ b/styles/home.less
@@ -20,8 +20,8 @@
 }
 
 #home-services .summary-item {
-    margin-bottom: 0;
-    padding-bottom: 0;
+    margin-bottom: 0 !important;
+    padding-bottom: 0 !important;
 }
 
 #home-services .summary-title a,
